cabal-version:       2.4
name:                PrepTextos
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             GPL-3.0-only
license-file:        LICENSE
author:              Iván Molina Rebolledo
maintainer:          Iván Molina Rebolledo <ivanmolinarebolledo@gmail.com>
copyright:           2022 Iván Molina Rebolledo
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

common common-options
  build-depends:       base ^>= 4.14.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     PrepTextos, EmojiP, Stopwords
  build-depends:       parsec,
                       text,
                       emojis


executable PrepTextos
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       PrepTextos,text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
